@@ -3,7 +3,10 @@ setGeneric( "has", function( object, name, ... ){
 	standardGeneric( "has" )
 } )
 ._has_message <- function( object, name, ...){
-	.Call( "Message__has_field", object@pointer, name, PACKAGE = "RProtoBuf" )
+	if (!.Call( "Message__field_exists", object@pointer, name, PACKAGE = "RProtoBuf" )) {
+		return(NULL)
+	} else {
+		return(.Call( "Message__has_field", object@pointer, name, PACKAGE = "RProtoBuf" ))
+	}
 }
 setMethod( "has", "Message", ._has_message )
-
