@@ -16,6 +16,9 @@ method of the corresponding \code{Message} is issued.
 For repeated fields, a call to the \code{FieldSize}
 method is issued, and the message is declared to have 
 the field if the size is greater than 0.
+
+\code{NULL} is returned if the descriptor for the message does not
+contain the given field at all.
 }
 \section{Methods}{
 	\describe{
@@ -29,8 +32,11 @@ readProtoFiles(file = unitest.proto.file)
 
 test <- new(protobuf_unittest.TestAllTypes)
 test$has("optional_int32")
-
+# FALSE
 test$add("repeated_int32", 1:10)
 test$has("repeated_int32")
+# TRUE
+test$has("nonexistant")
+# NULL
 }
 \keyword{methods}
